k8s/app-manifest/j26-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-auth
  annotations:
    reloader.stakater.com/auto: "true"
    reloader.stakater.com/rollout-strategy: "restart"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-auth
  template:
    metadata:
      labels:
        app: j26-auth
    spec:
      containers:
        - name: app
          image: ghcr.io/scouterna/j26-auth:f74456a
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: j26-auth-kv-csi
