k8s/app-manifest/j26-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-auth
spec:
  selector:
    app: j26-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
