k8s/app-manifest/j26-auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j26-auth
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/backend-protocol: "http"
    # cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
spec:
  ingressClassName: nginx
  rules:
    - host: app.dev.j26.se
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: j26-auth
                port:
                  number: 80
